layout bug fix

--- a/styles/personalData.css
+++ b/styles/personalData.css
@@ -105,17 +105,21 @@
   height: 50px;
   cursor: pointer;
   margin-right: -30px;
+  transition: 2s;
+  transform: rotate(0deg);
 
 }
 
 .personalData #span.active span {
   display: flex;
-  background: url("../assets/close.svg") no-repeat;
   width: 50px;
   height: 50px;
   margin-right: -35px;
   cursor: pointer;
   z-index: 5000;
+  transition: 2s;
+  transform: rotate(180deg);
+
 }
 
 
